[gd_scene load_steps=8 format=3 uid="uid://ciiorn26ve1ww"]

[ext_resource type="Script" uid="uid://wgea6ex3yvru" path="res://scripts/tablet.gd" id="1_jwrmr"]
[ext_resource type="Texture2D" uid="uid://cmhkde8c3du53" path="res://assets/tilemaps/Портал, шипы и тд.png" id="2_suit2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ctd3"]
size = Vector2(18, 20)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jwrmr"]
light_mode = 1

[sub_resource type="Animation" id="Animation_asl8k"]
resource_name = "hide"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-19, -35), Vector2(-19, -28)]
}

[sub_resource type="Animation" id="Animation_sdclj"]
resource_name = "show"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-19, -28), Vector2(-19, -35)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebcv0"]
_data = {
&"hide_label": SubResource("Animation_asl8k"),
&"show_label": SubResource("Animation_sdclj")
}

[node name="tablet" type="Node2D"]
script = ExtResource("1_jwrmr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.625, 1.625)
texture = ExtResource("2_suit2")
hframes = 8
vframes = 8
frame = 11

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.4, 1.4)
shape = SubResource("RectangleShape2D_5ctd3")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_as_relative = false
material = SubResource("CanvasItemMaterial_jwrmr")
offset_left = -19.0
offset_top = -28.0
offset_right = 37.0
offset_bottom = -6.0
scale = Vector2(0.7, 0.7)
theme_override_font_sizes/font_size = 16
text = "press E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ebcv0")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
